# pysco

./: .gitignore  LICENSE  README.md  cosmotable.py  cubic.py  initial_conditions.py  integration.py  laplacian.py  main.py  mesh.py  morton.py  multigrid.py  numpy_atomic.py  param.ini  pyproject.toml  quartic.py  solver.py  units.py  utils.py
.github/workflows/: python-publish.yml
examples/: INFOS  example.py  param.ini  test_sphere.py
pysco/: __init__.py  cosmotable.py  cubic.py  fourier.py  initial_conditions.py  integration.py  iostream.py  laplacian.py  laplacian_reformulated.py  loops.py  main.py  mesh.py  mond.py  morton.py  multigrid.py  numpy_atomic.py  param.ini  quartic.py  solver.py  utils.py
