[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pysco-nbody"
version = "0.6.8"
authors = [
    { name = "Michel-Andrès Breton", email = "michel-andres.breton@obspm.fr" },
]
description = "A Python library to run N-body simulations with modified gravity"
readme = "README.md"
requires-python = ">=3.11, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "numba",
    "pandas",
    "scipy",
    "pyarrow",
    "h5py",
    "rich",
    "Pylians",
    "icc-rt",
    "pyfftw",
]

[project.urls]
Homepage = "https://github.com/mianbreton/pysco"
